Updated website information

--- a/index.html
+++ b/index.html
@@ -22,31 +22,30 @@
 </head>
 <body>
 
-  <h1>My Project Name</h1>
+  <h1>Promptle</h1>
   <p>
-    A short description of what your project is and what problem it solves.
+    University of Nevada, Reno
+    Computer Sceience and Engineering
+    CS 426 Senior Projects Spring 2026
+  </p>
+  <h1>Team 9</h1>
+  <p>
+    Team members: Richard Nguyen, Jorge Cervacio Izquierdo, Cole Gilliam, Cody Shrive
+    Instructors: David Feil-Seifer and Vinh Le
+    External Advisor(s): UNR Prof. Erin Keith
   </p>
 
-  <div class="section">
-    <h2>About the Project</h2>
+  <div class = "section">
+    <h1>Description</h1>
     <p>
-      Explain your idea, goals, and how it works.
+    Promptle is a web game similar to Wordle but with AI implemented into it. This project addresses the limitation that Wordle games have, these are hard coded topics that can come from a hard set database, we address the problem by the implementation of AI through OpenAI API to dynamically create puzzles based on the users’ prompt they give. Our project will have a login system with profiles,  “most common” wordle games, AI prompt generated game, multiplayer, and variety of other games, The purpose of this document is to explain the plans for our project after revision and counseling from instructors and compare changes that were made since then.
     </p>
-  </div>
-
-  <div class="section">
-    <h2>Features</h2>
-    <ul>
-      <li>Feature 1</li>
-      <li>Feature 2</li>
-      <li>Feature 3</li>
-    </ul>
   </div>
 
   <div class="section">
     <h2>Media (Coming Soon)</h2>
     <p>
-      This section will include screenshots and demo videos.
+      This section will include poster image and demo videos.
     </p>
   </div>
 
