Fixed line spacing

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
   <h1>Promptle</h1>
   <p>
-    University of Nevada, Reno
-    Computer Sceience and Engineering
+    University of Nevada, Reno<br>
+    Computer Sceience and Engineering<br>
     CS 426 Senior Projects Spring 2026
   </p>
   <h1>Team 9</h1>
   <p>
-    Team members: Richard Nguyen, Jorge Cervacio Izquierdo, Cole Gilliam, Cody Shrive
-    Instructors: David Feil-Seifer and Vinh Le
+    Team members: Richard Nguyen, Jorge Cervacio Izquierdo, Cole Gilliam, Cody Shrive<br>
+    Instructors: David Feil-Seifer and Vinh Le<br>
     External Advisor(s): UNR Prof. Erin Keith
   </p>
 
