Fixed minor spelling issues

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h1>Promptle</h1>
   <p>
     University of Nevada, Reno<br>
-    Computer Sceience and Engineering<br>
+    Computer Science and Engineering<br>
     CS 426 Senior Projects Spring 2026
   </p>
   <h1>Team 9</h1>
