--- a/index.html
+++ b/index.html
@@ -4,26 +4,21 @@
   <meta charset="UTF-8" />
   <title>My Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 900px;
-      margin: auto;
-      padding: 40px 20px;
-      line-height: 1.6;
-    }
-    h1, h2 {
-      color: #222;
-    }
-    .section {
-      margin-bottom: 40px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <h1>Promptle</h1>
-  <p>
+  <h1 class="title" aria-label="Promptle">
+    <span class="wordle-letter">P</span>
+    <span class="wordle-letter">R</span>
+    <span class="wordle-letter">O</span>
+    <span class="wordle-letter">M</span>
+    <span class="wordle-letter">P</span>
+    <span class="wordle-letter">T</span>
+    <span class="wordle-letter">L</span>
+    <span class="wordle-letter">E</span>
+  </h1>
+  <p class="project-meta">
     University of Nevada, Reno<br>
     Computer Science and Engineering<br>
     CS 426 Senior Projects Spring 2026
