Actually update description because I accidentally undid my changes before prior commit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <span class="wordle-letter">L</span>
     <span class="wordle-letter">E</span>
   </h1>
-  <p class="project-meta">
+  <p class="project-info">
     University of Nevada, Reno<br>
     Computer Science and Engineering<br>
     CS 426 Senior Projects Spring 2026
