--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
   <div class = "section">
     <h1>Description</h1>
     <p>
-    Promptle is a web game similar to Wordle but with AI implemented into it. This project addresses the limitation that Wordle games have, these are hard coded topics that can come from a hard set database, we address the problem by the implementation of AI through OpenAI API to dynamically create puzzles based on the users’ prompt they give. Our project will have a login system with profiles,  “most common” wordle games, AI prompt generated game, multiplayer, and variety of other games, The purpose of this document is to explain the plans for our project after revision and counseling from instructors and compare changes that were made since then.
+    Promptle is a web game similar to Wordle but with AI implemented into it to address the limitation that 
+    Wordle games have. They are hard coded topics that come from a hard set database meaning there is only 
+    so many topics, guesses, and answers. We address this problem by implemention AI through OpenAI's API 
+    to dynamically create puzzles based on a topic the user inputs. Our project will have a login system with profiles, 
+    popuar topics, AI prompt generated games, and multiplayer. It will also includee a variety of other games 
+    following the idea of using AI and letting the user choose the topic to allow unlimited and unique games.
     </p>
   </div>
 
