Added images folder and media

--- a/index.html
+++ b/index.html
@@ -43,10 +43,22 @@
   </div>
 
   <div class="section">
-    <h2>Media (Coming Soon)</h2>
-    <p>
-      This section will include poster image and demo videos.
-    </p>
+    <h2>Media</h2>
+    <div class="media-gallery">
+      <figure class="media-card">
+        <img class="media-image" src="images/Promptle Front Page.png" alt="Promptle front page screen" />
+        <figcaption class="media-description">
+          Front page view showing the Promptle homepage and main navigation.
+        </figcaption>
+      </figure>
+
+      <figure class="media-card">
+        <img class="media-image" src="images/Promptle Gameplay.png" alt="Promptle gameplay screen" />
+        <figcaption class="media-description">
+          Gameplay view showing the active puzzle board and user guesses in progress for the topic Pokemon.
+        </figcaption>
+      </figure>
+    </div>
   </div>
 
 </body>
